# DWH

./: .env  PERFORMANCE_IMPROVEMENTS.md  cleaned_dim_car.xlsx  cleaned_dim_sales.xlsx  dagster_cloud.yaml  debug_payment.py  dim_car.xlsx  dim_card_agent.xlsx  dim_sales.xlsx  fact_installment_payments.csv  fact_insurance_motor.xlsx  pyproject.toml  requirements.txt  test_performance.py  workspace.yaml  ~$cleaned_dim_car.xlsx
.github/workflows/: branch_deployments.yml  deploy.yml
jobs/: 1.ipynb  __init__.py  cuscode+ins_type ที่ซ้ำ.xlsx  dim_agent copy 2.py  dim_agent copy 3.py  dim_agent copy 4.py  dim_agent copy.py  dim_agent merge uuid to quotation.ipynb  dim_agent merge uuid to quotation.py  dim_agent.py  dim_car copy.py  dim_car merge uuid to quotation.ipynb  dim_car merge uuid to quotation.py  dim_car.py  dim_card_agent copy.py  dim_card_agent.ipynb  dim_card_agent.py  dim_card_agent.xlsx  dim_company.py  dim_customer copy.py  dim_customer merge uuid to quotation.ipynb  dim_customer merge uuid to quotation.py  dim_customer.py  dim_ins_card.ipynb  dim_order_type copy.py  dim_order_type merge uuid to quotation.ipynb  dim_order_type merge uuid to quotation.py  dim_order_type.py  dim_payment_plan copy.py  dim_payment_plan merge uuid to quotation.ipynb  dim_payment_plan merge uuid to quotation.py  dim_payment_plan.py  dim_sales copy.py  dim_sales.py  fact_card_ins.ipynb  fact_card_ins.py  fact_check_price copy.py  fact_check_price.py  fact_commission copy.py  fact_commission.ipynb  (+20 more)
schedules/: schedules.py
workflows/: branch_deployments.yml  deploy.yml
